--- a/tu-proyecto/public/index.html
+++ b/tu-proyecto/public/index.html
@@ -36,6 +36,7 @@
         <main class="tree-view" id="treeView" aria-label="Conversation tree visualization">
             <svg id="treeSvg" width="100%" height="100%" role="img" aria-label="Tree diagram"></svg>
             <div class="controls" role="group" aria-label="Visualization controls">
+                <button type="button" data-action="change-view">CHANGE VIEW</button>
                 <button type="button" data-action="reset-view">Reset View</button>
                 <button type="button" data-action="export">Export</button>
                 <button type="button" data-action="import">Import</button>
